CI speed adjustment

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -70,8 +70,6 @@ jobs:
           printf '[repertoire]\nmusic_directories = ["../_testlib"]\nindex_crontab = 0 0 * * *' > _data/config.ini
           cd backend/
           make debug > ../tests/output/logs/backend.log 2>&1 &
-          # Also just get the indexer going... saves us time later.
-          curl -X POST http://localhost:5000/dev/indexlib &
       - name: Cache frontend dependencies
         id: cache-frontend-deps
         uses: actions/cache@v2
@@ -87,6 +85,8 @@ jobs:
         run: |
           cd frontend/
           yarn wait-port -t 30000 5000
+          # Get the backend indexer going... saves us time later.
+          curl -X POST http://localhost:5000/dev/indexlib &
           yarn start > ../tests/output/logs/frontend.log 2>&1 &
       - name: Cache testing dependencies
         id: cache-test-deps
