--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -66,7 +66,7 @@ jobs:
         working-directory: backend/
       - name: Spin up backend server
         run: |
-          mkdir -p _data/ tests/output/logs/
+          mkdir _data/ output/
           printf '[repertoire]\nmusic_directories = ["../_testlib"]\nindex_crontab = 0 0 * * *' > _data/config.ini
           cd backend/
           make debug > ../output/backend.log 2>&1 &
