--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loading": "^2.0.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-slider": "^1.1.2",
