--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -73,8 +73,15 @@ jobs:
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: yarn install
+      - name: Cache eslint cache
+        id: cache-eslint
+        uses: actions/cache@v2
+        with:
+          path: frontend/.eslintcache
+          key: "${{ runner.os }}-eslint-${{ github.sha }}"
+          restore-keys: "${{ runner.os }}-eslint-"
       - name: Run lint check
-        run: yarn eslint src/ --ext .ts,.tsx --max-warnings=0
+        run: yarn eslint src/ --ext .ts,.tsx --cache --max-warnings=0
   graphql_codegen:
     name: GraphQL Codegen
     runs-on: ubuntu-latest
