Move frontend tests and stories adjacent to code they correspond to

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,10 +17,8 @@
     "jsx": "react-jsx",
     "baseUrl": "./",
     "paths": {
-      "~/*": ["./src/*"],
-      "~stories/*": ["./src/*"],
-      "~tests/*": ["./tests/*"]
+      "~/*": ["./src/*"]
     }
   },
-  "include": ["src", "stories", "tests", "types"]
+  "include": ["src", "types"]
 }
