Change GH Actions workflows to only run when related code changes

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -2,9 +2,13 @@ name: Frontend
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
   pull_request:
-    branches: [ master ]
+    paths:
+      - ./github/**
+      - frontend/
+      - e2e_tests/
 
 jobs:
   test:
