--- a/.github/src/backend.yml
+++ b/.github/src/backend.yml
@@ -2,9 +2,13 @@ name: Backend
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
   pull_request:
-    branches: [ master ]
+    paths:
+      - ./github/**
+      - backend/
+      - e2e_tests/
 
 jobs:
   {% for job in jobs %}
