--- a/backend/yoyo.ini
+++ b/backend/yoyo.ini
@@ -1,7 +1,7 @@
 # This is for development use only.
 
 [DEFAULT]
-sources = src/migrations
+sources = src/migrations/sql
 migration_table = _yoyo_migration
 batch_mode = off
 verbosity = 0
