--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,7 @@
     "react-toast-notifications": "^2.4.0",
     "react-virtualized": "^9.22.2",
     "tailwindcss": "^2.0.1",
-    "twin.macro": "^2.2.3",
+    "twin.macro": "^2.3.3",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
@@ -50,6 +50,7 @@
     "@graphql-codegen/typescript-operations": "1.17.14",
     "@graphql-codegen/typescript-react-apollo": "^2.2.1",
     "@snowpack/app-scripts-react": "^2.0.0",
+    "@snowpack/plugin-babel": "^2.1.7",
     "@snowpack/plugin-react-refresh": "^2.4.0",
     "@snowpack/plugin-typescript": "^1.2.0",
     "@snowpack/web-test-runner-plugin": "^0.2.0",
@@ -88,7 +89,7 @@
     "postcss": "^8.2.6",
     "prettier": "^2.2.1",
     "react-is": "^17.0.1",
-    "snowpack": "3.0.13",
+    "snowpack": "3.3.6",
     "typedoc": "^0.20.24",
     "typescript": "^4.1.3",
     "wait-port": "^0.2.9"
