Handle deps installation on dockerfile spin up

--- a/.dockerignore
+++ b/.dockerignore
@@ -5,7 +5,11 @@ __pycache__
 /backend/.env
 /backend/htmlcov
 /backend/*.egg-info
+/backend/.mypy_cache
+/backend/.pytest_cache
+__pycache__
 /frontend/node_modules
 /frontend/build
 /frontend/coverage
+/frontend/.eslintcache
 /e2e_tests
