--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "license": "AGPL-3.0",
   "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
+    "start": "vite",
+    "build": "vite build",
     "test": "jest",
     "testcov": "jest --coverage --coverageDirectory='coverage'",
     "lint": "eslint src/ --ext .ts,.tsx --fix",
@@ -50,11 +50,6 @@
     "@graphql-codegen/typescript-graphql-files-modules": "1.18.1",
     "@graphql-codegen/typescript-operations": "1.17.14",
     "@graphql-codegen/typescript-react-apollo": "^2.2.1",
-    "@snowpack/app-scripts-react": "^2.0.0",
-    "@snowpack/plugin-babel": "^2.1.7",
-    "@snowpack/plugin-react-refresh": "^2.4.0",
-    "@snowpack/plugin-typescript": "^1.2.0",
-    "@snowpack/web-test-runner-plugin": "^0.2.0",
     "@storybook/addon-actions": "^6.1.21",
     "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.21",
@@ -73,6 +68,7 @@
     "@types/react-virtualized": "^9.21.10",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.5.0",
+    "@vitejs/plugin-react-refresh": "^1.3.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-twin": "^1.0.2",
     "eslint": "^7.17.0",
@@ -90,9 +86,10 @@
     "postcss": "^8.2.6",
     "prettier": "^2.2.1",
     "react-is": "^17.0.1",
-    "snowpack": "3.0.13",
     "typedoc": "^0.20.24",
     "typescript": "^4.1.3",
+    "vite": "^2.3.2",
+    "vite-plugin-babel-macros": "^1.0.5",
     "wait-port": "^0.2.9"
   },
   "browserslist": {
