Autoformat with new prettier version

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "test": "jest",
     "testcov": "jest --coverage --coverageDirectory='coverage'",
     "lint": "eslint src/ --ext .ts,.tsx --fix",
+    "fmt": "prettier --write src",
     "codegen": "graphql-codegen --config codegen.yml",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
