remove codecov PR comments

--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -5,7 +5,4 @@ coverage:
     patch: off
     project: off
 
-comment:
-  layout: "files"
-  behavior: default
-  require_changes: yes
+comment: false
