Add additional frontend linters

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "snowpack build",
     "test": "jest",
     "testcov": "jest --coverage --coverageDirectory='coverage'",
-    "lint": "eslint src/ --ext .ts,.tsx --fix",
+    "lint": "eslint src/ --ext .ts,.tsx --fix --cache",
     "fmt": "prettier --write src",
     "codegen": "graphql-codegen --config codegen.yml",
     "storybook": "start-storybook -p 6006",
@@ -82,7 +82,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^6.0.1",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
     "http-proxy": "^1.18.1",
