--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,11 +1,11 @@
 /.eslintcache
-/src/index.css
 /node_modules
 /.pnp
 .pnp.js
 /coverage
 /build
 /storybook-static
+/build-storybook.log
 
 npm-debug.log*
 yarn-debug.log*
