--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -130,6 +130,6 @@ jobs:
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: yarn install
       - name: Upload storybook
-        run: chromaui/action@v1
+        uses: chromaui/action@v1
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
