--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -132,4 +132,5 @@ jobs:
       - name: Upload storybook
         uses: chromaui/action@v1
         with:
+          workingDir: 'frontend/'
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
