--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
+    "tsc": "tsc",
     "test": "jest",
     "testcov": "jest --coverage --coverageDirectory='coverage'",
     "lint": "eslint src/ --ext .ts,.tsx --fix --cache",
     "fmt": "prettier --write src",
     "codegen": "graphql-codegen --config codegen.yml",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "chromatic"
   },
   "babelMacros": {
     "twin": {
@@ -75,6 +77,7 @@
     "@typescript-eslint/parser": "^4.5.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-twin": "^1.0.2",
+    "chromatic": "^5.8.3",
     "eslint": "^7.17.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.14.0",
