--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -42,6 +42,7 @@ sphinxcontrib-httpdomain = "^1.7.0"
 flake8 = "^3.8.4"
 pytest-xdist = "^2.2.1"
 filelock = "^3.0.12"
+semgrep = "^0.53.0"
 
 [tool.black]
 line-length = 88
