--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: ${{ runner.os }}-therealpoetry-1.1.4
+          key: ${{ runner.os }}-poetry-1.1.4
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
@@ -55,7 +55,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ runner.os }}-python-3.9.5-${{ hashFiles('**/poetry.lock') }}
           restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
@@ -94,7 +94,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: ${{ runner.os }}-therealpoetry-1.1.4
+          key: ${{ runner.os }}-poetry-1.1.4
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
@@ -105,7 +105,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ runner.os }}-python-3.9.5-${{ hashFiles('**/poetry.lock') }}
           restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
@@ -149,7 +149,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: ${{ runner.os }}-therealpoetry-1.1.4
+          key: ${{ runner.os }}-poetry-1.1.4
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
@@ -160,7 +160,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ runner.os }}-python-3.9.5-${{ hashFiles('**/poetry.lock') }}
           restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
@@ -197,7 +197,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: ${{ runner.os }}-therealpoetry-1.1.4
+          key: ${{ runner.os }}-poetry-1.1.4
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
@@ -208,7 +208,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ runner.os }}-python-3.9.5-${{ hashFiles('**/poetry.lock') }}
           restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
@@ -251,7 +251,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: ${{ runner.os }}-therealpoetry-1.1.4
+          key: ${{ runner.os }}-poetry-1.1.4
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
@@ -262,7 +262,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ runner.os }}-python-3.9.5-${{ hashFiles('**/poetry.lock') }}
           restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
