--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -38,13 +38,13 @@ jobs:
         uses: ./.github/actions/install-sqlite
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.9.1'
+          python-version: '3.9.5'
       - name: Cache poetry
         id: cache-poetry
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: ${{ runner.os }}-therealpoetry-1.1.4
+          key: ${{ runner.os }}-poetry-1.1.4
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
@@ -55,7 +55,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ runner.os }}-python-3.9.5-${{ hashFiles('**/poetry.lock') }}
           restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
@@ -88,13 +88,13 @@ jobs:
         uses: ./.github/actions/install-sqlite
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.9.1'
+          python-version: '3.9.5'
       - name: Cache poetry
         id: cache-poetry
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: ${{ runner.os }}-therealpoetry-1.1.4
+          key: ${{ runner.os }}-poetry-1.1.4
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
@@ -105,7 +105,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ runner.os }}-python-3.9.5-${{ hashFiles('**/poetry.lock') }}
           restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
@@ -143,13 +143,13 @@ jobs:
         uses: ./.github/actions/install-sqlite
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.9.1'
+          python-version: '3.9.5'
       - name: Cache poetry
         id: cache-poetry
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: ${{ runner.os }}-therealpoetry-1.1.4
+          key: ${{ runner.os }}-poetry-1.1.4
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
@@ -160,7 +160,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ runner.os }}-python-3.9.5-${{ hashFiles('**/poetry.lock') }}
           restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
@@ -191,13 +191,13 @@ jobs:
         uses: ./.github/actions/install-sqlite
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.9.1'
+          python-version: '3.9.5'
       - name: Cache poetry
         id: cache-poetry
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: ${{ runner.os }}-therealpoetry-1.1.4
+          key: ${{ runner.os }}-poetry-1.1.4
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
@@ -208,7 +208,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ runner.os }}-python-3.9.5-${{ hashFiles('**/poetry.lock') }}
           restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
@@ -245,13 +245,13 @@ jobs:
         uses: ./.github/actions/install-sqlite
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.9.1'
+          python-version: '3.9.5'
       - name: Cache poetry
         id: cache-poetry
         uses: actions/cache@v2
         with:
           path: ~/.poetry
-          key: ${{ runner.os }}-therealpoetry-1.1.4
+          key: ${{ runner.os }}-poetry-1.1.4
       - name: Install poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
@@ -262,7 +262,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ runner.os }}-python-3.9.5-${{ hashFiles('**/poetry.lock') }}
           restore-keys: ${{ runner.os }}-poetry-
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
