Update frontend lint/fmt commands

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -97,7 +97,9 @@ jobs:
         id: cache-test-deps
         uses: actions/cache@v2
         with:
-          path: e2e/node_modules/
+          path: |
+            e2e/node_modules/
+            ~/.cache/Cypress/
           key: ${{ runner.os }}-yarn-e2e-${{ hashFiles('**/e2e/yarn.lock') }}
           restore-keys: ${{ runner.os }}-yarn-e2e-
       - name: Install e2e tests dependencies
@@ -134,7 +136,7 @@ jobs:
         id: cache-deps
         uses: actions/cache@v2
         with:
-          path: frontend/node_modules
+          path: e2e/node_modules
           key: ${{ runner.os }}-yarn-e2e-${{ hashFiles('**/yarn.lock') }}
           restore-keys: ${{ runner.os }}-yarn-e2e-
       - name: Install dependencies
