--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,8 @@
     "tsc": "tsc",
     "test": "jest",
     "testcov": "jest --coverage --coverageDirectory='coverage'",
-    "lint": "eslint src/ --ext .ts,.tsx --fix --cache",
-    "fmt": "prettier --write src",
+    "lint": "eslint src --ext .ts,.tsx --cache --max-warnings=0 && prettier src --check",
+    "fmt": "eslint src --ext .ts,.tsx --cache --fix && prettier src --write",
     "codegen": "graphql-codegen --config codegen.yml",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
